little fix on the template view and the requirements file

--- a/apps/news/templates/news/news.html
+++ b/apps/news/templates/news/news.html
@@ -4,6 +4,6 @@
        Author : {{ article.author }} <br>
        Date : {{ article.published_at }} <br>
        Link: <a href="{{ article.url }}" target="_blank">{{ article.url }}</a> <br>
-       {{ article.description }}
-    <p>
+       Description: {{ article.description }}
+    </p>
 {% endfor %}
